# Class-inheritance

./: .gitignore  Animals.hpp  Bear.cpp  Bear.hpp  BestConfig.cfg  Bird.cpp  Bird.hpp  CMakeLists.txt  Cow.cpp  Cow.hpp  Elephant.cpp  Elephant.hpp  Food.hpp  Horse.cpp  Horse.hpp  Makefile  README.md  Tiger.cpp  config.cfg  config1.cfg  config_by_count.cfg  main.cpp  zooCheck
Animals/: Animals.cpp  Animals.hpp  Bear.cpp  Bear.hpp  Boar.cpp  Boar.hpp  Bush.cpp  Bush.hpp  Cow.cpp  Cow.hpp  Food.hpp  Fox.cpp  Fox.hpp  Goose.cpp  Goose.hpp  Gorilla.cpp  Gorilla.hpp  Horse.hpp  Pig.cpp  Pig.hpp  Sheep.cpp  Sheep.hpp  Tiger.hpp  Wolf.cpp  Wolf.hpp
Drawer/: Button.cpp  Button.hpp  Drawer.cpp  Drawer.hpp  plot.cpp  plot.hpp
Field/: Field.cpp  Field.hpp
Neuro/: config_start.py  neuro.py  neuro_by_count.py  neuro_by_position.py
